# ParkingLot

parking/: .pre-commit-config.yaml  Dockerfile  data-1721708916867.csv  db.sqlite3  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  whole.json
parking/core/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
parking/core/migrations/: 0001_initial.py  0002_cardetail_cartype_parking_isavailable.py  0003_rename_carownernumber_cardetail_ownernumber_and_more.py  0004_cardetail_parkingspot.py  0005_alter_parking_wingname.py  0006_cardetail_parkedwingname.py  0007_alter_cardetail_parkingspot_alter_parking_wingname.py  0008_rename_parkingspot_cardetail_parkingwing_and_more.py  0009_rename_vehicleowner_cardetail_ownername_and_more.py  0010_rename_ownername_cardetail_owner_name_and_more.py  0011_rename_isavailable_parking_is_available.py  0012_parkingdetail.py  0013_rename_car_arrived_date_parkingdetail_vehicle_arrived_date_and_more.py  0014_remove_parkingdetail_vehicle_left_date.py  0015_parkingdetail_vehicle_has_left_and_more.py  0016_alter_cardetail_date.py  0017_alter_parkingdetail_vehicle_arrived_date_and_more.py  0018_alter_parkingdetail_vehicle_left_date.py  0019_parkingdetail_vehicle_arrived_time_and_more.py  0020_ownerprofile.py  0021_rename_owner_name_cardetail_owner.py  0022_ownerprofile_owner_address_ownerprofile_owner_gender_and_more.py  0022_remove_ownerprofile_owner_name_profile_and_more.py  0023_rename_owner_number_profile_ownerprofile_number_profile_and_more.py  0024_rename_parking_wing_cardetail_parking_wing_view.py  0025_rename_parking_wing_view_cardetail_parking_wing.py  0026_remove_parkingdetail_vehicle_number_and_more.py  0027_rename_vehicle_number_parkingdetail_vehicles.py  0028_alter_parkingdetail_vehicles.py  0029_alter_parkingdetail_vehicles.py
parking/locale/en/LC_MESSAGES/: django.po
parking/locale/ne/LC_MESSAGES/: django.po
parking/parking/: __init__.py  celery.py  settings.py  urls.py
parking/rest_api/: admin.py  apps.py  factories.py  filters.py  models.py  pagination.py  pdf_utils.py  permissions.py  resources.py  serializers.py  signals.py  tasks.py  tests.py  translation.py  urls.py  views.py
parking/rest_api/migrations/: 0001_initial.py  0002_alter_vehicleowner_owned_vehicle.py  0003_customuser_is_owner.py  0004_vehicleowner_user.py  0005_alter_vehicleowner_user.py  0006_alter_vehicleowner_user.py  0007_remove_vehicleowner_user.py  0008_vehicleowner_user.py  0009_alter_vehicleowner_user.py  0010_parkingreport.py  0011_remove_parkingreport_cost_and_more.py  0012_delete_parkingreport.py  0013_parking_wing_name_en_parking_wing_name_ne.py  0014_document_comment.py  0015_remove_comment_end_offset_and_more.py  0016_comment_whole_page_alter_comment_x1_alter_comment_x2_and_more.py  0017_document_image.py  0018_comment_height_comment_width.py  0019_remove_document_image.py  0020_comment_comment_alter_comment_content.py  0021_alter_comment_content.py  0022_document_image.py  0023_comment_image.py  0024_remove_comment_image_remove_document_image.py
parking/rest_api/test/: conftest.py  test_factoryboy.py  test_models.py  test_pytest.py  test_urls.py  test_views.py
parking/templates/: car.html  email_template.html  index.html  index2.html  parking.html
