[tool.poetry]
name = "parking"
version = "0.1.0"
description = ""
authors = ["Aayam <aayam.maharjan3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
celery = "^5.4.0"
redis = "^5.0.7"
sudo = "^1.0.0"
django-celery-results = "^2.5.1"
django-celery-beat = "^2.6.0"
django-decouple = "^2.1"
django-sphinxdoc = "^2.0.0"
pytest = "^8.3.1"
pytest-django = "^4.8.0"
factory-boy = "^3.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
django-extensions = "^3.2.3"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
